--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url('beingdss.png');
+        background-image: url('a.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
