--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         position: relative;
         overflow: hidden;
         padding: 0 20px;
-        background: linear-gradient(135deg, var(--jungle-dark) 0%, var(--jungle-medium) 100%);
-    }
+        background-image: url('a.png');    }
 
     .hero::before {
         content: '';
